@@ -233,3 +233,4 @@ QPDF not crossing page boundary 0
 QPDF replace foreign indirect with null 0
 QPDF not copying pages object 0
 QPDF insert foreign page 0
+QPDFWriter foreign object 0
