@@ -149,7 +149,7 @@ $td->runtest("remove page we don't have",
 	     $td->NORMALIZE_NEWLINES);
 # ----------
 $td->notify("--- Miscellaneous Tests ---");
-$n_tests += 43;
+$n_tests += 44;
 
 $td->runtest("qpdf version",
 	     {$td->COMMAND => "qpdf --version"},
@@ -365,6 +365,10 @@ $td->runtest("reserved objects",
 $td->runtest("check output",
              {$td->FILE => "a.pdf"},
              {$td->FILE => "reserved-objects.pdf"});
+$td->runtest("detect foreign object in write",
+             {$td->COMMAND => "test_driver 29 copy-foreign-objects-in.pdf"},
+             {$td->FILE => "foreign-in-write.out", $td->EXIT_STATUS => 0},
+             $td->NORMALIZE_NEWLINES);
 
 show_ntests();
 # ----------
